kmbox-ai-rust/src/bindings/kmboxYOLO.h.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of __fsid_t"][::std::mem::size_of::<__fsid_t>() - 8usize];
    ["Alignment of __fsid_t"][::std::mem::align_of::<__fsid_t>() - 4usize];
    ["Offset of field: __fsid_t::__val"][::std::mem::offset_of!(__fsid_t, __val) - 0usize];
};
pub type __clock_t = ::std::os::raw::c_long;
pub type __rlim_t = ::std::os::raw::c_ulong;
pub type __rlim64_t = ::std::os::raw::c_ulong;
pub type __id_t = ::std::os::raw::c_uint;
pub type __time_t = ::std::os::raw::c_long;
pub type __useconds_t = ::std::os::raw::c_uint;
pub type __suseconds_t = ::std::os::raw::c_long;
pub type __daddr_t = ::std::os::raw::c_int;
pub type __key_t = ::std::os::raw::c_int;
pub type __clockid_t = ::std::os::raw::c_int;
pub type __timer_t = *mut ::std::os::raw::c_void;
pub type __blksize_t = ::std::os::raw::c_long;
pub type __blkcnt_t = ::std::os::raw::c_long;
pub type __blkcnt64_t = ::std::os::raw::c_long;
pub type __fsblkcnt_t = ::std::os::raw::c_ulong;
pub type __fsblkcnt64_t = ::std::os::raw::c_ulong;
pub type __fsfilcnt_t = ::std::os::raw::c_ulong;
pub type __fsfilcnt64_t = ::std::os::raw::c_ulong;
pub type __fsword_t = ::std::os::raw::c_long;
pub type __ssize_t = ::std::os::raw::c_long;
pub type __syscall_slong_t = ::std::os::raw::c_long;
pub type __syscall_ulong_t = ::std::os::raw::c_ulong;
pub type __loff_t = __off64_t;
pub type __caddr_t = *mut ::std::os::raw::c_char;
pub type __intptr_t = ::std::os::raw::c_long;
pub type __socklen_t = ::std::os::raw::c_uint;
pub type __sig_atomic_t = ::std::os::raw::c_int;
pub type int_least8_t = __int_least8_t;
pub type int_least16_t = __int_least16_t;
pub type int_least32_t = __int_least32_t;
pub type int_least64_t = __int_least64_t;
pub type uint_least8_t = __uint_least8_t;
pub type uint_least16_t = __uint_least16_t;
pub type uint_least32_t = __uint_least32_t;
pub type uint_least64_t = __uint_least64_t;
pub type int_fast8_t = ::std::os::raw::c_schar;
pub type int_fast16_t = ::std::os::raw::c_long;
pub type int_fast32_t = ::std::os::raw::c_long;
pub type int_fast64_t = ::std::os::raw::c_long;
pub type uint_fast8_t = ::std::os::raw::c_uchar;
pub type uint_fast16_t = ::std::os::raw::c_ulong;
pub type uint_fast32_t = ::std::os::raw::c_ulong;
pub type uint_fast64_t = ::std::os::raw::c_ulong;
pub type intmax_t = __intmax_t;
pub type uintmax_t = __uintmax_t;
pub type rknn_context = u64;
pub const _rknn_query_cmd_RKNN_QUERY_IN_OUT_NUM: _rknn_query_cmd = 0;
pub const _rknn_query_cmd_RKNN_QUERY_INPUT_ATTR: _rknn_query_cmd = 1;
pub const _rknn_query_cmd_RKNN_QUERY_OUTPUT_ATTR: _rknn_query_cmd = 2;
pub const _rknn_query_cmd_RKNN_QUERY_PERF_DETAIL: _rknn_query_cmd = 3;
pub const _rknn_query_cmd_RKNN_QUERY_PERF_RUN: _rknn_query_cmd = 4;
pub const _rknn_query_cmd_RKNN_QUERY_SDK_VERSION: _rknn_query_cmd = 5;
pub const _rknn_query_cmd_RKNN_QUERY_MEM_SIZE: _rknn_query_cmd = 6;
pub const _rknn_query_cmd_RKNN_QUERY_CUSTOM_STRING: _rknn_query_cmd = 7;
pub const _rknn_query_cmd_RKNN_QUERY_NATIVE_INPUT_ATTR: _rknn_query_cmd = 8;
pub const _rknn_query_cmd_RKNN_QUERY_NATIVE_OUTPUT_ATTR: _rknn_query_cmd = 9;
pub const _rknn_query_cmd_RKNN_QUERY_NATIVE_NC1HWC2_INPUT_ATTR: _rknn_query_cmd = 8;
pub const _rknn_query_cmd_RKNN_QUERY_NATIVE_NC1HWC2_OUTPUT_ATTR: _rknn_query_cmd = 9;
pub const _rknn_query_cmd_RKNN_QUERY_NATIVE_NHWC_INPUT_ATTR: _rknn_query_cmd = 10;
pub const _rknn_query_cmd_RKNN_QUERY_NATIVE_NHWC_OUTPUT_ATTR: _rknn_query_cmd = 11;
pub const _rknn_query_cmd_RKNN_QUERY_DEVICE_MEM_INFO: _rknn_query_cmd = 12;
pub const _rknn_query_cmd_RKNN_QUERY_INPUT_DYNAMIC_RANGE: _rknn_query_cmd = 13;
pub const _rknn_query_cmd_RKNN_QUERY_CURRENT_INPUT_ATTR: _rknn_query_cmd = 14;
pub const _rknn_query_cmd_RKNN_QUERY_CURRENT_OUTPUT_ATTR: _rknn_query_cmd = 15;
pub const _rknn_query_cmd_RKNN_QUERY_CURRENT_NATIVE_INPUT_ATTR: _rknn_query_cmd = 16;
pub const _rknn_query_cmd_RKNN_QUERY_CURRENT_NATIVE_OUTPUT_ATTR: _rknn_query_cmd = 17;
pub const _rknn_query_cmd_RKNN_QUERY_CMD_MAX: _rknn_query_cmd = 18;
pub type _rknn_query_cmd = ::std::os::raw::c_uint;
pub use self::_rknn_query_cmd as rknn_query_cmd;
pub const _rknn_tensor_type_RKNN_TENSOR_FLOAT32: _rknn_tensor_type = 0;
pub const _rknn_tensor_type_RKNN_TENSOR_FLOAT16: _rknn_tensor_type = 1;
pub const _rknn_tensor_type_RKNN_TENSOR_INT8: _rknn_tensor_type = 2;
pub const _rknn_tensor_type_RKNN_TENSOR_UINT8: _rknn_tensor_type = 3;
pub const _rknn_tensor_type_RKNN_TENSOR_INT16: _rknn_tensor_type = 4;
pub const _rknn_tensor_type_RKNN_TENSOR_UINT16: _rknn_tensor_type = 5;
pub const _rknn_tensor_type_RKNN_TENSOR_INT32: _rknn_tensor_type = 6;
pub const _rknn_tensor_type_RKNN_TENSOR_UINT32: _rknn_tensor_type = 7;
pub const _rknn_tensor_type_RKNN_TENSOR_INT64: _rknn_tensor_type = 8;
pub const _rknn_tensor_type_RKNN_TENSOR_BOOL: _rknn_tensor_type = 9;
pub const _rknn_tensor_type_RKNN_TENSOR_INT4: _rknn_tensor_type = 10;
pub const _rknn_tensor_type_RKNN_TENSOR_BFLOAT16: _rknn_tensor_type = 11;
pub const _rknn_tensor_type_RKNN_TENSOR_TYPE_MAX: _rknn_tensor_type = 12;
pub type _rknn_tensor_type = ::std::os::raw::c_uint;
pub use self::_rknn_tensor_type as rknn_tensor_type;
pub const _rknn_tensor_qnt_type_RKNN_TENSOR_QNT_NONE: _rknn_tensor_qnt_type = 0;
pub const _rknn_tensor_qnt_type_RKNN_TENSOR_QNT_DFP: _rknn_tensor_qnt_type = 1;
pub const _rknn_tensor_qnt_type_RKNN_TENSOR_QNT_AFFINE_ASYMMETRIC: _rknn_tensor_qnt_type = 2;
pub const _rknn_tensor_qnt_type_RKNN_TENSOR_QNT_MAX: _rknn_tensor_qnt_type = 3;
pub type _rknn_tensor_qnt_type = ::std::os::raw::c_uint;
pub use self::_rknn_tensor_qnt_type as rknn_tensor_qnt_type;
pub const _rknn_tensor_format_RKNN_TENSOR_NCHW: _rknn_tensor_format = 0;
pub const _rknn_tensor_format_RKNN_TENSOR_NHWC: _rknn_tensor_format = 1;
pub const _rknn_tensor_format_RKNN_TENSOR_NC1HWC2: _rknn_tensor_format = 2;
pub const _rknn_tensor_format_RKNN_TENSOR_UNDEFINED: _rknn_tensor_format = 3;
pub const _rknn_tensor_format_RKNN_TENSOR_FORMAT_MAX: _rknn_tensor_format = 4;
pub type _rknn_tensor_format = ::std::os::raw::c_uint;
pub use self::_rknn_tensor_format as rknn_tensor_format;
pub const _rknn_core_mask_RKNN_NPU_CORE_AUTO: _rknn_core_mask = 0;
pub const _rknn_core_mask_RKNN_NPU_CORE_0: _rknn_core_mask = 1;
pub const _rknn_core_mask_RKNN_NPU_CORE_1: _rknn_core_mask = 2;
pub const _rknn_core_mask_RKNN_NPU_CORE_2: _rknn_core_mask = 4;
pub const _rknn_core_mask_RKNN_NPU_CORE_0_1: _rknn_core_mask = 3;
pub const _rknn_core_mask_RKNN_NPU_CORE_0_1_2: _rknn_core_mask = 7;
pub const _rknn_core_mask_RKNN_NPU_CORE_ALL: _rknn_core_mask = 65535;
pub const _rknn_core_mask_RKNN_NPU_CORE_UNDEFINED: _rknn_core_mask = 65536;
pub type _rknn_core_mask = ::std::os::raw::c_uint;
pub use self::_rknn_core_mask as rknn_core_mask;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_input_output_num {
    pub n_input: u32,
    pub n_output: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_input_output_num"][::std::mem::size_of::<_rknn_input_output_num>() - 8usize];
    ["Alignment of _rknn_input_output_num"]
        [::std::mem::align_of::<_rknn_input_output_num>() - 4usize];
    ["Offset of field: _rknn_input_output_num::n_input"]
        [::std::mem::offset_of!(_rknn_input_output_num, n_input) - 0usize];
    ["Offset of field: _rknn_input_output_num::n_output"]
        [::std::mem::offset_of!(_rknn_input_output_num, n_output) - 4usize];
};
pub type rknn_input_output_num = _rknn_input_output_num;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_tensor_attr {
    pub index: u32,
    pub n_dims: u32,
    pub dims: [u32; 16usize],
    pub name: [::std::os::raw::c_char; 256usize],
    pub n_elems: u32,
    pub size: u32,
    pub fmt: rknn_tensor_format,
    pub type_: rknn_tensor_type,
    pub qnt_type: rknn_tensor_qnt_type,
    pub fl: i8,
    pub zp: i32,
    pub scale: f32,
    pub w_stride: u32,
    pub size_with_stride: u32,
    pub pass_through: u8,
    pub h_stride: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_tensor_attr"][::std::mem::size_of::<_rknn_tensor_attr>() - 376usize];
    ["Alignment of _rknn_tensor_attr"][::std::mem::align_of::<_rknn_tensor_attr>() - 4usize];
    ["Offset of field: _rknn_tensor_attr::index"]
        [::std::mem::offset_of!(_rknn_tensor_attr, index) - 0usize];
    ["Offset of field: _rknn_tensor_attr::n_dims"]
        [::std::mem::offset_of!(_rknn_tensor_attr, n_dims) - 4usize];
    ["Offset of field: _rknn_tensor_attr::dims"]
        [::std::mem::offset_of!(_rknn_tensor_attr, dims) - 8usize];
    ["Offset of field: _rknn_tensor_attr::name"]
        [::std::mem::offset_of!(_rknn_tensor_attr, name) - 72usize];
    ["Offset of field: _rknn_tensor_attr::n_elems"]
        [::std::mem::offset_of!(_rknn_tensor_attr, n_elems) - 328usize];
    ["Offset of field: _rknn_tensor_attr::size"]
        [::std::mem::offset_of!(_rknn_tensor_attr, size) - 332usize];
    ["Offset of field: _rknn_tensor_attr::fmt"]
        [::std::mem::offset_of!(_rknn_tensor_attr, fmt) - 336usize];
    ["Offset of field: _rknn_tensor_attr::type_"]
        [::std::mem::offset_of!(_rknn_tensor_attr, type_) - 340usize];
    ["Offset of field: _rknn_tensor_attr::qnt_type"]
        [::std::mem::offset_of!(_rknn_tensor_attr, qnt_type) - 344usize];
    ["Offset of field: _rknn_tensor_attr::fl"]
        [::std::mem::offset_of!(_rknn_tensor_attr, fl) - 348usize];
    ["Offset of field: _rknn_tensor_attr::zp"]
        [::std::mem::offset_of!(_rknn_tensor_attr, zp) - 352usize];
    ["Offset of field: _rknn_tensor_attr::scale"]
        [::std::mem::offset_of!(_rknn_tensor_attr, scale) - 356usize];
    ["Offset of field: _rknn_tensor_attr::w_stride"]
        [::std::mem::offset_of!(_rknn_tensor_attr, w_stride) - 360usize];
    ["Offset of field: _rknn_tensor_attr::size_with_stride"]
        [::std::mem::offset_of!(_rknn_tensor_attr, size_with_stride) - 364usize];
    ["Offset of field: _rknn_tensor_attr::pass_through"]
        [::std::mem::offset_of!(_rknn_tensor_attr, pass_through) - 368usize];
    ["Offset of field: _rknn_tensor_attr::h_stride"]
        [::std::mem::offset_of!(_rknn_tensor_attr, h_stride) - 372usize];
};
pub type rknn_tensor_attr = _rknn_tensor_attr;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_input_range {
    pub index: u32,
    pub shape_number: u32,
    pub fmt: rknn_tensor_format,
    pub name: [::std::os::raw::c_char; 256usize],
    pub dyn_range: [[u32; 16usize]; 512usize],
    pub n_dims: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_input_range"][::std::mem::size_of::<_rknn_input_range>() - 33040usize];
    ["Alignment of _rknn_input_range"][::std::mem::align_of::<_rknn_input_range>() - 4usize];
    ["Offset of field: _rknn_input_range::index"]
        [::std::mem::offset_of!(_rknn_input_range, index) - 0usize];
    ["Offset of field: _rknn_input_range::shape_number"]
        [::std::mem::offset_of!(_rknn_input_range, shape_number) - 4usize];
    ["Offset of field: _rknn_input_range::fmt"]
        [::std::mem::offset_of!(_rknn_input_range, fmt) - 8usize];
    ["Offset of field: _rknn_input_range::name"]
        [::std::mem::offset_of!(_rknn_input_range, name) - 12usize];
    ["Offset of field: _rknn_input_range::dyn_range"]
        [::std::mem::offset_of!(_rknn_input_range, dyn_range) - 268usize];
    ["Offset of field: _rknn_input_range::n_dims"]
        [::std::mem::offset_of!(_rknn_input_range, n_dims) - 33036usize];
};
pub type rknn_input_range = _rknn_input_range;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_perf_detail {
    pub perf_data: *mut ::std::os::raw::c_char,
    pub data_len: u64,
}
